tests/baselines/reference/assignmentCompatWithNumericIndexer.errors.txt
assignmentCompatWithNumericIndexer.ts(13,5): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithNumericIndexer.ts(14,1): error TS2322: Type 'A' is not assignable to type '{ [x: number]: Derived; }'.
  'number' index signatures are incompatible.
    Property 'bar' is missing in type 'Base' but required in type 'Derived'.
assignmentCompatWithNumericIndexer.ts(17,5): error TS2454: Variable 'b2' is used before being assigned.
assignmentCompatWithNumericIndexer.ts(18,1): error TS2322: Type 'A' is not assignable to type '{ [x: number]: Derived2; }'.
  'number' index signatures are incompatible.
    Type 'Base' is missing the following properties from type 'Derived2': baz, bar
assignmentCompatWithNumericIndexer.ts(32,9): error TS2322: Type '{ [x: number]: Derived; }' is not assignable to type 'A<T>'.
  'number' index signatures are incompatible.
    Type 'Derived' is not assignable to type 'T'.
      'Derived' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
assignmentCompatWithNumericIndexer.ts(32,13): error TS2454: Variable 'b' is used before being assigned.
assignmentCompatWithNumericIndexer.ts(33,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: number]: Derived; }'.
  'number' index signatures are incompatible.
    Type 'T' is not assignable to type 'Derived'.
      Type 'Base' is not assignable to type 'Derived'.
assignmentCompatWithNumericIndexer.ts(36,9): error TS2322: Type '{ [x: number]: Derived2; }' is not assignable to type 'A<T>'.
  'number' index signatures are incompatible.
    Type 'Derived2' is not assignable to type 'T'.
      'Derived2' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
assignmentCompatWithNumericIndexer.ts(36,13): error TS2454: Variable 'b2' is used before being assigned.
assignmentCompatWithNumericIndexer.ts(37,9): error TS2322: Type 'A<T>' is not assignable to type '{ [x: number]: Derived2; }'.
  'number' index signatures are incompatible.
    Type 'T' is not assignable to type 'Derived2'.
      Type 'Base' is not assignable to type 'Derived2'.
assignmentCompatWithNumericIndexer.ts(40,13): error TS2454: Variable 'b3' is used before being assigned.


==== assignmentCompatWithNumericIndexer.ts (11 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: number]: Base;
    }
    
    var a: A;
    var b: { [x: number]: Derived; }
    a = b;
        ~
!!! error TS2454: Variable 'b' is used before being assigned.
    b = a; // error
    ~
!!! error TS2322: Type 'A' is not assignable to type '{ [x: number]: Derived; }'.
!!! error TS2322:   'number' index signatures are incompatible.
!!! error TS2322:     Property 'bar' is missing in type 'Base' but required in type 'Derived'.
!!! related TS2728 assignmentCompatWithNumericIndexer.ts:4:34: 'bar' is declared here.
    
    var b2: { [x: number]: Derived2; }
    a = b2;
        ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    b2 = a; // error
    ~~
!!! error TS2322: Type 'A' is not assignable to type '{ [x: number]: Derived2; }'.
!!! error TS2322:   'number' index signatures are incompatible.
!!! error TS2322:     Type 'Base' is missing the following properties from type 'Derived2': baz, bar
    
    module Generics {
        class A<T extends Base> {
            [x: number]: T;
        }
    
        class B extends A<Base> {
            [x: number]: Derived; // ok
        }
    
        function foo<T extends Base>() {
            var a: A<T>;
            var b: { [x: number]: Derived; }
            a = b; // error
            ~
!!! error TS2322: Type '{ [x: number]: Derived; }' is not assignable to type 'A<T>'.
!!! error TS2322:   'number' index signatures are incompatible.
!!! error TS2322:     Type 'Derived' is not assignable to type 'T'.
!!! error TS2322:       'Derived' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
                ~
!!! error TS2454: Variable 'b' is used before being assigned.
            b = a; // error
            ~
!!! error TS2322: Type 'A<T>' is not assignable to type '{ [x: number]: Derived; }'.
!!! error TS2322:   'number' index signatures are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'Derived'.
!!! error TS2322:       Type 'Base' is not assignable to type 'Derived'.
    
            var b2: { [x: number]: Derived2; }
            a = b2; // error
            ~
!!! error TS2322: Type '{ [x: number]: Derived2; }' is not assignable to type 'A<T>'.
!!! error TS2322:   'number' index signatures are incompatible.
!!! error TS2322:     Type 'Derived2' is not assignable to type 'T'.
!!! error TS2322:       'Derived2' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'Base'.
                ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
            b2 = a; // error
            ~~
!!! error TS2322: Type 'A<T>' is not assignable to type '{ [x: number]: Derived2; }'.
!!! error TS2322:   'number' index signatures are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'Derived2'.
!!! error TS2322:       Type 'Base' is not assignable to type 'Derived2'.
    
            var b3: { [x: number]: T; }
            a = b3; // ok
                ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
            b3 = a; // ok
        }
    }